force-app/main/default/src/objects/PJN_Case_Field_Configuration__mdt/fields/MVN_Account_Role_Case_Field__c.field-meta.xml
<CustomField>
    <fullName>MVN_Account_Role_Case_Field__c</fullName>
    <label>Account Role Case Field</label>
    <length>45</length>
    <type>Text</type>
</CustomField>