force-app/main/default/src/objects/PJN_Case_Field_Configuration__mdt/fields/MVN_Account_Role_Mapping__c.field-meta.xml
<CustomField>
    <fullName>MVN_Account_Role_Mapping__c</fullName>
    <label>Account Role Mapping</label>
    <length>100</length>
    <type>Text</type>
</CustomField>