force-app/main/default/src/objects/PJN_Case_Field_Configuration__mdt/fields/PJN_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Account_Record_Type__c</fullName>
    <label>Account Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>