force-app/main/default/src/objects/PJN_Case_Field_Configuration__mdt/fields/PJN_Case_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case_Field_API_Name__c</fullName>
    <description>API name of the field being configured</description>
    <label>Case Field API Name</label>
    <length>43</length>
    <type>Text</type>
</CustomField>