force-app/main/default/src/objects/PJN_Case_Field_Configuration__mdt/fields/PJN_Case_Team_Inverse_Role_Mapping__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case_Team_Inverse_Role_Mapping__c</fullName>
    <description>Together with Case Team Role Mapping this field is used to help identify the correct Reciprocal Role to assign when creating a contact to contact relationship</description>
    <label>Case Team Inverse Role Mapping</label>
    <length>100</length>
    <type>Text</type>
</CustomField>