force-app/main/default/src/objects/PJN_Case_Field_Configuration__mdt/fields/PJN_Case_Team_Role_Mapping__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case_Team_Role_Mapping__c</fullName>
    <description>The case team role this field maps to. Used by CaseCareTeamManager.cls trigger handler</description>
    <label>Case Team Role Mapping</label>
    <length>100</length>
    <type>Text</type>
</CustomField>