force-app/main/default/src/objects/PJN_Case_Field_Configuration__mdt/fields/PJN_Delete_Care_Team_Role_on_change__c.field-meta.xml
<CustomField>
    <fullName>PJN_Delete_Care_Team_Role_on_change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the PJN_CaseCareTeamManager.cls trigger handler will delete the existing role for the case care team.</description>
    <label>Delete Care Team Role on change</label>
    <type>Checkbox</type>
</CustomField>