force-app/main/default/src/objects/PJN_Case_Field_Configuration__mdt/fields/PJN_Reciprocal_Inverse_Role_Case_Field__c.field-meta.xml
<CustomField>
    <fullName>PJN_Reciprocal_Inverse_Role_Case_Field__c</fullName>
    <label>Reciprocal Inverse Role Case Field</label>
    <length>64</length>
    <type>Text</type>
</CustomField>