force-app/main/default/src/objects/PJN_Case_Field_Configuration__mdt/listViews/PJN_All_Case_Field_Configurations.listView-meta.xml
<ListView>
    <fullName>PJN_All_Case_Field_Configurations</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Case_Field_API_Name__c</columns>
    <columns>PJN_Case_Team_Role_Mapping__c</columns>
    <columns>PJN_Reciprocal_Role__c</columns>
    <columns>PJN_Reciprocal_Role_Case_Field__c</columns>
    <columns>PJN_Reciprocal_Inverse_Role__c</columns>
    <columns>PJN_Reciprocal_Inverse_Role_Case_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Case Field Configurations</label>
    <language>en_US</language>
</ListView>